<resources>
    <string name="app_name">REEM GLAM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome\nBack</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="dont_have_an_acc_signup">Don\'t have an account? <b><u>Sign up</u></b></string>
    <string name="guest">Guest</string>
    <string name="create_account">Create\nAccount</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign up</string>
    <string name="already_have_an_acc_login">Already have an account? <b><u>Login</u></b></string>
    <string name="mobile">Mobile</string>
    <string name="forgotpassword">Forgot\nPassword?</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="save">Save</string>
    <string name="verify">Verify</string>
    <string name="enter_otp_received_on_email">Enter otp received on your email</string>
    <string name="resend_otp">Didn\'t receive code? <b><u>Request Again</u></b></string>
    <string name="login_success_text">“Success\nYour account is all set\nEnjoy using”</string>
    <string name="home">Home</string>
    <string name="booking">Booking</string>
    <string name="profile">Profile</string>
    <string name="book_now">Book now</string>
    <string name="categories">Categories</string>
    <string name="testimonals">Quote of the day</string>
    <string name="search_for_services">Search for services</string>
    <string name="select_date">Select date</string>
    <string name="time">Time</string>
    <string name="total_amount">Total Amount</string>
    <string name="menu">Menu</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="notification">Notification</string>
    <string name="gallery">Gallery</string>
    <string name="my_address">My Address</string>
    <string name="contact_us">Contact us</string>
    <string name="rate_us_on_app_store">Rate us on App Store</string>
    <string name="logout">Logout</string>
    <string name="my_profile">My Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="booking_type">Booking type</string>
    <string name="sub_total">Sub Total</string>
    <string name="home_service_fee">Home Service Fee</string>
    <string name="total">Total</string>
    <string name="reschedule_booking">Reschedule Booking</string>
    <string name="book_for_now">Book for now</string>
    <string name="update_booking">Update Booking</string>
    <string name="cart">Cart</string>
    <string name="confirm">Confirm</string>
    <string name="cancel_booking">Cancel booking</string>
    <string name="cancel_your_booking">Cancel your booking</string>
    <string name="are_you_sure_to_cancel_your_booking">Are you sure you\nwant to cancel</string>
    <string name="stay">Stay</string>
    <string name="yes_cancel">Yes, Cancel</string>
    <string name="summary">Summary</string>
    <string name="pay">Pay</string>
    <string name="payment_method">Payment method</string>
    <string name="cash_in_hand">Cash in hand</string>
    <string name="pay_at_store">Pos</string>
    <string name="add_address">Add address</string>
    <string name="enter_address_details">Enter Address Details</string>
    <string name="zone">Zone</string>
    <string name="street">Street</string>
    <string name="building">Building*</string>
    <string name="floor_number">Floor Number</string>
    <string name="mobile_number">Mobile Number?*</string>
    <string name="landline_number">Landline Number(Optional)</string>
    <string name="instructions_if_any">Instructions (If any)</string>
    <string name="save_and_continue">Save and continue</string>
    <string name="your_location">Your Location</string>
    <string name="confirm_pin_location">Confirm pin location</string>
    <string name="go_to_bookings"><u>Go to booking</u></string>
    <string name="continue_booking">Continue Booking</string>
    <string name="packages">Packages</string>
    <string name="choose_language">Choose\nLanguage</string>
    <string name="continue_text">Continue</string>
    <string name="your_session_is_out">Your session has been expired please login again.</string>
    <string name="hair_cut">Hair Cut</string>
    <string name="hair_color">Hair Color</string>
    <string name="head_spa">Head Spa</string>
    <string name="blow_dry">Blow Dry</string>
    <string name="hair_henna">Hair Henna</string>
    <string name="hair_treatment">Hair Treatment</string>
    <string name="point_of_sale">Pos</string>
    <string name="hair_kids">Kids</string>
    <string name="more">More</string>
    <string name="order_success">Your\nappointment\nbooked is\nsuccessfully</string>
    <string name="view_all">View all</string>
    <string name="reset_password">Reset\nPassword</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_email">Please enter email address</string>
    <string name="please_enter_mobile">Please enter mobile number</string>
    <string name="please_enter_valid_mobile">Please enter a valid mobile</string>
    <string name="please_enter_country_code">Please select country code.</string>
    <string name="please_enter_password">Please enter a valid password.</string>
    <string name="please_enter_otp">Please enter a valid otp</string>
    <string name="please_enter_valid_password">Password should be same.</string>
    <string name="update">Update</string>
    <string name="update_profile">Update Profile</string>
    <string name="off">OFF</string>
    <string name="please_try_ahain">Please try again later</string>
    <string name="services">Services</string>
    <string name="please_add_zone">Please enter zone.</string>
    <string name="please_add_street">Please enter street.</string>
    <string name="please_add_building">Please enter building.</string>
    <string name="please_add_floor">Please enter floor.</string>
    <string name="please_add_mobile">Please enter mobile number.</string>
    <string name="please_ask_admin_to_provide_store_address">Please ask admin to provide store address.</string>
    <string name="please_go_back_and_try_again">There is some issue please go back and try again.</string>
    <string name="please_add_service">Please select service to place the order</string>
    <string name="please_select_order_date">Please select order date.</string>
    <string name="added_to_cart_successfully">Service added to cart successfully.</string>
    <string name="select_time_slot">Select your time slot</string>
    <string name="please_login_first">Please login first</string>
    <string name="reema">Reem Glam Salon</string>
    <string name="please_login">Please Login</string>
    <string name="cancel">Cancel</string>
    <string name="please_select_order_time_slot">Please select time slot.</string>
    <string name="please_select_address_type">Please select address type</string>
    <string name="no_category_found">No category found.</string>
    <string name="coming_soon">Coming soon.</string>
    <string name="are_you_sure_you_want_logout">are you sure you want to logout?</string>
    <string name="old_password">Old Password</string>
    <string name="please_enter_new_password">Please enter new password.</string>
    <string name="please_confirm_password">Please confirm your password.</string>
    <string name="please_check_new_and_confirm_password">New and cofirm password should be same.</string>
    <string name="please_add_address">Please add address for home first</string>
    <string name="data_added_ion_cart">Data added in cart successfully.</string>
    <string name="please_enter_a_valid_email">Please enter a valid email</string>
    <string name="please_select_any_heena">Please select a heena option</string>
    <string name="please_go_back_and_select_heena_option">Please go back and select heena option</string>
    <string name="this_slot_is_not_available">This slot is not available please select other.</string>
    <string name="heena">Heena</string>
    <string name="our_staff_will_come">Our staff will visit your home</string>
    <string name="add_new_address">Add new address details</string>
    <string name="villa_number_flat_number">Villa number/Flat number</string>
    <string name="address_type">Address type</string>
    <string name="shop_text">Visit Salon</string>
    <string name="home_text">Home</string>
    <string name="please_select_timeslot_and_date_again">Please select another slot time or date as this is not available.</string>
    <string name="add_more_items">Add More Items</string>
    <string name="price_should_be_more">Please select service more than 100 QR for home service.</string>
    <string name="okay">Okay</string>
    <string name="otp_sent_successfully">Otp has been verified successfully.</string>
    <string name="enter_otp_sent_successfully">Please enter valid otp.</string>
    <string name="no_service_available">No service available.</string>
    <string name="currency_value">QAR</string>
    <string name="for_text">For</string>
    <string name="shop">Shop</string>
    <string name="new_text">New</string>
    <string name="am_text">AM</string>
    <string name="pm_text">PM</string>
    <string name="default_notification_channel_id">channel notification</string>
    <string name="location_updated">Location Updated</string>
    <string name="location_permisssion">Please allow for location permissions</string>
    <string name="permission_denied_explanation">Location permission denied it will cause difficulty in location updation.</string>
    <string name="settings">Settings</string>
    <string name="location_permission_required">Location permission required</string>
    <string name="search_for_location">Search for location</string>
    <string name="data_updated_successfully">Data has been updated successfully</string>
</resources>