<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".auth.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="@dimen/_500sdp"
                android:layout_height="1000dp"
                android:layout_marginRight="@dimen/_300sdp"
                android:layout_marginBottom="@dimen/_70sdp"
                android:background="@drawable/ic_login_girl_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_35sdp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/menu"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_back" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_menu">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_english"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:gravity="center"
                    android:text="@string/english"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view_english"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="@drawable/ic_white_line"
                    app:layout_constraintEnd_toEndOf="@id/txt_english"
                    app:layout_constraintStart_toStartOf="@id/txt_english"
                    app:layout_constraintTop_toBottomOf="@id/txt_english" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_arabic"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:gravity="center"
                    android:text="@string/arabic"
                    android:textColor="@color/text_dark_grey"
                    android:textSize="@dimen/_18ssp"
                    app:layout_constraintStart_toEndOf="@id/txt_english"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view_arabic"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="@drawable/ic_white_line"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@id/txt_arabic"
                    app:layout_constraintStart_toStartOf="@id/txt_arabic"
                    app:layout_constraintTop_toBottomOf="@id/txt_arabic" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_notification"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center_vertical"
                android:text="@string/notification"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_language" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_booking"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center_vertical"
                android:text="@string/booking"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_notification" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_profile"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center_vertical"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_booking" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_gallery"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center_vertical"
                android:text="@string/gallery"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_profile" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_cart"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center_vertical"
                android:text="@string/cart"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_gallery" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_address"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center_vertical"
                android:text="@string/my_address"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_cart" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_contact"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center_vertical"
                android:text="@string/contact_us"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_address" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_rate_us"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center_vertical"
                android:text="@string/rate_us_on_app_store"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_contact" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_logout"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center_vertical"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_rate_us" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>