<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:background="@drawable/rounded_pink_bg"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reema"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_15sdp"
            android:id="@+id/txtTitle"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTitle"
            android:id="@+id/txtDescription"
            android:text="@string/please_login"
            android:textColor="@color/black"
            android:fontFamily="@font/montserra_regular"
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_10sdp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/text_dark_grey"
            app:layout_constraintTop_toBottomOf="@id/txtDescription"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/view"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:id="@+id/btnCancel"
            android:text="@string/cancel"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserra_regular"
            app:layout_constraintTop_toBottomOf="@id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/view1"
            android:gravity="center"/>

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/text_dark_grey"
            android:id="@+id/view1"
            app:layout_constraintTop_toTopOf="@id/btnLogin"
            app:layout_constraintBottom_toBottomOf="@id/btnLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:id="@+id/btnLogin"
            android:text="@string/login"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toEndOf="@id/view1"
            android:textColor="@color/black"
            android:fontFamily="@font/montserra_regular"
            app:layout_constraintTop_toBottomOf="@id/view"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>