<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8083288F">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/rounded_pink_bg"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:fontFamily="@font/oranienbaum_regular"
            android:gravity="center"
            android:text="@string/cancel_your_booking"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/_22ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_cancel_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center"
            android:text="@string/are_you_sure_to_cancel_your_booking"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="@id/txt_title"
            app:layout_constraintStart_toStartOf="@id/txt_title"
            app:layout_constraintTop_toBottomOf="@id/txt_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_stay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/ic_btn_bg_light"
            android:backgroundTint="@color/app_dark_bg"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center"
            android:text="@string/stay"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_cancel"
            app:layout_constraintStart_toStartOf="@id/txt_title"
            app:layout_constraintTop_toBottomOf="@id/txt_cancel_description" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/ic_btn_bg_light"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center"
            android:text="@string/yes_cancel"
            android:textColor="@color/txt_pink_color"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/txt_title"
            app:layout_constraintStart_toEndOf="@id/btn_stay"
            app:layout_constraintTop_toBottomOf="@id/txt_cancel_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>